--- a/css/userMainpage-style.css
+++ b/css/userMainpage-style.css
@@ -123,7 +123,7 @@ nav {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: white;
+    background-color: darkslategrey;
     border-radius: 5px;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -139,7 +139,7 @@ nav {
 }
 
 .items::after{
-    content: 'Tilføj til ordre';
+    content: 'Add to basket';
     font-family: 'Helvetica', Arial, sans-serif;
     position: absolute;
     top: 40%;
