--- a/css/staffMainpage-style.css
+++ b/css/staffMainpage-style.css
@@ -6,7 +6,8 @@
 
 html, body {
     height: 100%;
-    background: url("../lib/login-background.jpg") no-repeat;
+    background-size:100%;
+    background: url("../lib/login-background.jpg");
 }
 
 body {
@@ -81,7 +82,7 @@ nav {
     background-position: 100% 0;
 }
 .order:hover:before{
-    content: 'Marker som klar til afhentning';
+    content: 'Click to make order ready for pickup';
     position: absolute;
     top:50%;
     left:50%;
