--- a/css/userMainpage-style.css
+++ b/css/userMainpage-style.css
@@ -123,7 +123,7 @@ nav {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: darkslategrey;
+    background-color: white;
     border-radius: 5px;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
